# leverx

./: .dockerignore  .env.example  .gitignore  PITCH.md  README.md  Submission.md  docker-compose.yml  vercel.json
indexer/: -C  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.ec2.yml  entry.sh
indexer/crates/leverx-indexer/: Cargo.toml
indexer/crates/leverx-indexer/src/: config.rs  handlers.rs  keys.rs  main.rs  move_events.rs  points.rs  predict_events.rs  predict_math.rs  predict_projections.rs  projections.rs  relation_upserts.rs
indexer/crates/leverx-schema/: Cargo.toml
indexer/crates/leverx-schema/migrations/20250607000000_leverx_init/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250607100000_global_market_trades/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250607200000_model_relations/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250607210000_protocol_deploy_ids/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250607300000_user_points/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250607400000_user_points_leverx_only/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250608000000_dusdc_only/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250608100000_drop_pyth_max_age/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250612120000_repair_position_mint_cost/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250613120000_liquidation_bps_insurance/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250613140000_repair_open_quantity_from_trades/: down.sql  up.sql
indexer/crates/leverx-schema/migrations/20250614120000_trigger_slippage_bps/: down.sql  (+1 more)
indexer/crates/leverx-schema/src/: lib.rs  models.rs  position_hints.rs  protocol.rs  relations.rs  schema.rs  vault_snapshot.rs
indexer/crates/leverx-server/: Cargo.toml
indexer/crates/leverx-server/src/: catalog.rs  global_trades.rs  leaderboard.rs  main.rs  orderbook.rs  pagination.rs  positions_response.rs  routes.rs  stream.rs  vault.rs  ws.rs
indexer/deploy/: deploy-ec2.ps1  ec2-apply-indexer-migrations.sh  ec2-deploy-indexer.sh  ec2-deploy-keeper-remote.sh  ec2-deploy-keeper.ps1  ec2-diagnose-positions.sh  ec2-fix-protocol-migration.sh  ec2-pull-keeper-remote.sh  ec2-pull-keeper.ps1  ec2-pull-keeper.sh  ec2-rebuild-indexer-remote.sh  ec2-rebuild-indexer.ps1  ec2-reload-nginx-remote.sh  ec2-reset-indexer-remote.sh  ec2-reset-indexer.ps1  ec2-reset-indexer.sh  ec2-update-rpc-remote.sh  ec2-user-data.sh  ec2-verify-migration.sh  reset-and-resync.sh  restart-ec2-services.sh  setup-keeper-nginx.sh  setup-nginx-certbot.sh
indexer/deploy/nginx/: 00-ws-upgrade-map.conf  indexer.suileverx.xyz.http.conf  indexer.suileverx.xyz.https.conf  keeper.suileverx.xyz.http.conf  keeper.suileverx.xyz.https.conf
indexer/scripts/: reset-from-publish.ps1  reset-from-publish.sh
(+485 files in other folders)
