[workspace]
resolver = "2"
members = [
    "crates/leverx-schema",
    "crates/leverx-indexer",
    "crates/leverx-server",
]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
diesel = { version = "2.3.9", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.9.0", features = ["bb8", "postgres"] }
diesel_migrations = "2.3.0"
anyhow = "1.0.98"
tracing = "0.1.41"
clap = { version = "4.5.31", features = ["derive", "env"] }
async-trait = "0.1.83"
bcs = "0.1.6"
url = "2.5.4"
prometheus = "0.14.0"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
dotenvy = "0.15.7"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
