[package]
name = "leverx-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leverx-indexer"
path = "src/main.rs"

[dependencies]
leverx-schema = { path = "../leverx-schema" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sui-indexer-alt-framework = { workspace = true }
sui-indexer-alt-metrics = { workspace = true }
sui-types = { workspace = true }
telemetry-subscribers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
