[package]
name = "leverx-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leverx-server"
path = "src/main.rs"

[dependencies]
leverx-schema = { path = "../leverx-schema" }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3.31"
clap = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
